fix ogo alignment

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1065,11 +1065,12 @@ http://www.tooplate.com/view/2098-health
   vertical-align: middle;
   /* margin-right:10px; */
   margin-top: -30px;
+  margin-right: 8px;
 }
 .logo-text {
   margin-left: -19px;
   position: relative;
-  top: 4px;
+  top: 2px;
   font-weight: bold;
   color: #cf3b24;
   font-size: 1.5em;
